fixed alignment of sensor readout display

--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -43,28 +43,35 @@ html {background: var(--dark-bg);}
 .numeric {
 	position: relative;
     display: inline-block; /* <= shrinks container to image size */
-    margin: 10px;
+    margin: 0px;
     border: 3px solid var(--main-accent);
     width: 100%;
+    text-align: center;
+    padding: 10px 0px;
 }
 
 
 .numeric img { /* <= optional, for responsiveness */
 	display: block;
 	height: auto;
-	margin: 20% 23% 23% 23%;
-	transform: rotate(-90deg);
+	/* margin: 20% 23% 23% 23%; */
+	position: absolute;
+    top: 50%;
+    left: 50%;
 	/* transform-origin: 50% 50%; */
+    transform: translate(-50%, -65%) rotate(-90deg);
 	max-width: 60px;
+
+
 }
 
-
+/*
 .numeric svg {
 	position: absolute;
 	top: 0;
 	left: 0;
 }
-
+*/
 
 #content {
 	background: var(--less-dark-bg);
